--- a/doc/icewm.1.adoc
+++ b/doc/icewm.1.adoc
@@ -983,6 +983,8 @@ launchApp.wav,
 workspaceChange.wav,
 windowOpen.wav,
 windowClose.wav,
+dialogOpen.wav,
+dialogClose.wav,
 windowMax.wav,
 windowRestore.wav,
 windowMin.wav,
