--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -1016,8 +1016,8 @@ L<wmctrl(1)>.
 
 =head1 BUGS
 
-B<xde-sessions> had no known bugs at the time of release.  Please report
-bugs for current versions to the source code repository at
+B<icewm> had no known bugs at the time of release.  Please report bugs
+for current versions to the source code repository at
 L<https://github.com/bbidulock/icewm/issues>.
 
 =head1 AUTHOR
