--- a/man/icehelp.pod
+++ b/man/icehelp.pod
@@ -10,6 +10,26 @@ B<icehelp> [I<OPTIONS>]
 
 =head1 DESCRIPTION
 
+=head1 OPTIONS
+
+=head2 GENERAL OPTIONS
+
+=over
+
+=item B<-h>, B<--help>
+
+Print a brief usage statement to F<stdout> and exit.
+
+=item B<-V>, B<--version>
+
+Print the program version to F<stdout> and exit.
+
+=item B<-C>, B<--copying>
+
+Print copying permissions to F<stdout> for the program and exit.
+
+=back
+
 =head1 BUGS
 
 B<icehelp> had no known bugs at the time of release.  Please report bugs
